--- a/index.html
+++ b/index.html
@@ -3,54 +3,84 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Multi-step form</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
+  <main>
+    <div class="container">
+
+      <div class="side-bar">
+
+        <div class="step-box-id">
+          <div class="step-circle">1</div>
+          <div class="step-type">
+            <p>Step 1</p>
+            <h2>Your Info</h2>
+          </div>
+        </div>
+        <div class="step-box-id">
+          <div class="step-circle">2</div>
+          <div class="step-type">
+            <p>Step 2</p>
+            <h2>Select Plan</h2>
+          </div>
+        </div>
+        <div class="step-box-id">
+          <div class="step-circle">3</div>
+          <div class="step-type">
+            <p>Step 3</p>
+            <h2>Add-ons</h2>
+          </div>
+        </div>
+        <div class="step-box-id">
+          <div class="step-circle">4</div>
+          <div class="step-type">
+            <p>Step 4</p>
+            <h2>Summary</h2>
+          </div>
+        </div>
+
+      </div>
+      <!---->
+      <div class="step-information">
+        <h1 class="primary-header">Personal info</h1>
+        <p class="primary-paragraph">Please provide your name, email address, and phone number.</p>
+
+        <form action="">
+
+          <div class="form-input">
+            <label for="name">Name</label>
+            <input type="text" name="name" id="name" placeholder="e.g. Stephen King">
+          </div>
+          <div class="form-input">
+            <label for="email">Name</label>
+            <input type="email" name="email" id="name" placeholder="e.g. stephenking@lorem.com">
+          </div>
+          <div class="form-input">
+            <label for="number">Name</label>
+            <input type="text" name="number" id="name" placeholder="e.g. +1 234 567 890">
+          </div>
+
+  <footer>
+    <a href=""><button type="button" class="next-step-btn">Next Step</button></a>
+  </footer>
+
+  
   <!-- Sidebar start -->
 
-  Step 1
-  Your info
-
-  Step 2
-  Select plan
-
-  Step 3
-  Add-ons
-
-  Step 4
-  Summary
+  
 
   <!-- Sidebar end -->
 
   <!-- Step 1 start -->
 
-  Personal info
-  Please provide your name, email address, and phone number.
-
-  Name
-  e.g. Stephen King
-
-  Email Address
-  e.g. stephenking@lorem.com
-
-  Phone Number
-  e.g. +1 234 567 890
-
-  Next Step
 
   <!-- Step 1 end -->
 
-  <!-- Step 2 start -->
+  <!-- Step 2 start
 
   Select your plan
   You have the option of monthly or yearly billing.
@@ -70,9 +100,9 @@
   Go Back
   Next Step
 
-  <!-- Step 2 end -->
+  Step 2 end -->
 
-  <!-- Step 3 start -->
+  <!-- Step 3 start
 
   Pick add-ons
   Add-ons help enhance your gaming experience.
@@ -92,23 +122,23 @@
   Go Back
   Next Step
 
-  <!-- Step 3 end -->
+  Step 3 end -->
 
-  <!-- Step 4 start -->
+  <!-- Step 4 start 
 
   Finishing up
   Double-check everything looks OK before confirming.
 
-  <!-- Dynamically add subscription and add-on selections here -->
+  Dynamically add subscription and add-on selections here
 
   Total (per month/year)
 
   Go Back
   Confirm
 
-  <!-- Step 4 end -->
+  Step 4 end -->
 
-  <!-- Step 5 start -->
+  <!-- Step 5 start
 
   Thank you!
 
@@ -116,7 +146,7 @@
   using our platform. If you ever need support, please feel free 
   to email us at support@loremgaming.com.
 
-  <!-- Step 5 end -->
+  Step 5 end -->
   
 
 </body>
