--- a/index.html
+++ b/index.html
@@ -15,31 +15,31 @@
       <div class="side-bar">
 
         <div class="step-box-id">
-          <div class="step-circle">1</div>
+          <div class="step-circle active">1</div>
           <div class="step-type">
             <p>Step 1</p>
-            <h2>Your Info</h2>
+            <h4>Your Info</h4>
           </div>
         </div>
         <div class="step-box-id">
           <div class="step-circle">2</div>
           <div class="step-type">
             <p>Step 2</p>
-            <h2>Select Plan</h2>
+            <h4>Select Plan</h4>
           </div>
         </div>
         <div class="step-box-id">
           <div class="step-circle">3</div>
           <div class="step-type">
             <p>Step 3</p>
-            <h2>Add-ons</h2>
+            <h4>Add-ons</h4>
           </div>
         </div>
         <div class="step-box-id">
           <div class="step-circle">4</div>
           <div class="step-type">
             <p>Step 4</p>
-            <h2>Summary</h2>
+            <h4>Summary</h4>
           </div>
         </div>
 
@@ -50,21 +50,26 @@
         <p class="primary-paragraph">Please provide your name, email address, and phone number.</p>
 
         <form action="">
-
           <div class="form-input">
             <label for="name">Name</label>
             <input type="text" name="name" id="name" placeholder="e.g. Stephen King">
           </div>
           <div class="form-input">
-            <label for="email">Name</label>
+            <label for="email">Email Address</label>
             <input type="email" name="email" id="name" placeholder="e.g. stephenking@lorem.com">
           </div>
           <div class="form-input">
-            <label for="number">Name</label>
+            <label for="number">Phone Number</label>
             <input type="text" name="number" id="name" placeholder="e.g. +1 234 567 890">
           </div>
+        </form>
 
-  <footer>
+        <footer>
+          <a href=""><button type="button" class="next-step-btn">Next Step</button></a>
+        </footer>
+      </div>
+
+  <footer class="mobile-footer">
     <a href=""><button type="button" class="next-step-btn">Next Step</button></a>
   </footer>
 
