mobile layout styled

--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
 
         <form action="">
           <div class="form-input">
-            <label for="name">Name</label>
+            <label for="name">Name <small></small></label>
             <input type="text" name="name" id="name" placeholder="e.g. Stephen King">
           </div>
           <div class="form-input">
-            <label for="email">Email Address</label>
+            <label for="email">Email Address <small></small></label>
             <input type="email" name="email" id="name" placeholder="e.g. stephenking@lorem.com">
           </div>
           <div class="form-input">
-            <label for="number">Phone Number</label>
+            <label for="number">Phone Number <small></small></label>
             <input type="text" name="number" id="name" placeholder="e.g. +1 234 567 890">
           </div>
         </form>
