step-information markup updated

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       </div>
       <!---->
       <div class="step-information">
+        <!--Step 1-->
         <div class="step-information-one">
           <h1 class="primary-header">Personal info</h1>
           <p class="primary-paragraph">Please provide your name, email address, and phone number.</p>
@@ -57,11 +58,11 @@
             </div>
             <div class="form-input">
               <label for="email">Email Address <small></small></label>
-              <input type="email" name="email" id="name" placeholder="e.g. stephenking@lorem.com">
+              <input type="email" name="email" id="email" placeholder="e.g. stephenking@lorem.com">
             </div>
             <div class="form-input">
               <label for="number">Phone Number <small></small></label>
-              <input type="text" name="number" id="name" placeholder="e.g. +1 234 567 890">
+              <input type="text" name="number" id="number" placeholder="e.g. +1 234 567 890">
             </div>
           </form>
   
@@ -69,11 +70,35 @@
             <a href=""><button type="button" class="next-step-btn">Next Step</button></a>
           </footer>
         </div>
-
+        <!--Step 2-->
         <div class="step-information-two">
           <h1 class="primary-header">Select your plan</h1>
           <p class="primary-paragraph">You have the option of monthly or yearly billing.</p>
+          <div>
+            
+            <div class="billing-opt">
+              <img src="assets/images/icon-arcade.svg" alt="Arcade">
+              <div>
+                <h3 class="bill-header"></h3>
+                <p class="bill-price"></p>
+              </div>
+            </div>
+            <div class="billing-opt">
+              <img src="assets/images/icon-advanced.svg" alt="Advanced">
+              <div>
+                <h3 class="bill-header"></h3>
+                <p class="bill-price"></p>
+              </div>
+            </div>
+            <div class="billing-opt">
+              <img src="assets/images/icon-pro.svg" alt="Pro">
+              <div>
+                <h3 class="bill-header"></h3>
+                <p class="bill-price"></p>
+              </div>
+            </div>
 
+          </div>
           Arcade
           $9/mo
         
@@ -91,7 +116,18 @@
             <a href="#"><button type="button" class="next-step-btn">Next Step</button></a>
           </footer>
         </div>
+        <!--Step 3-->
+        <div class="step-information-three">
 
+        </div>
+        <!--Step 4-->
+        <div class="step-information-four">
+
+        </div>
+        <!--Step 5-->
+        <div class="step-information-five">
+
+        </div>
       </div>
 
   <footer class="mobile-footer">
