--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="side-bar">
 
         <div class="step-box-id">
-          <div class="step-circle active">1</div>
+          <div class="step-circle">1</div>
           <div class="step-type">
             <p>Step 1</p>
             <h4>Your Info</h4>
@@ -81,6 +81,7 @@
               <div>
                 <h3 class="bill-header">Arcade</h3>
                 <p class="bill-price">$9/mo</p>
+                <p class="yearly-bonus">2 months free</p>
               </div>
             </div>
             <div class="billing-opt">
@@ -88,6 +89,7 @@
               <div>
                 <h3 class="bill-header">Advanced</h3>
                 <p class="bill-price">$12/mo</p>
+                <p class="yearly-bonus">2 months free</p>
               </div>
             </div>
             <div class="billing-opt">
@@ -95,6 +97,7 @@
               <div>
                 <h3 class="bill-header">Pro</h3>
                 <p class="bill-price">$15/mo</p>
+                <p class="yearly-bonus">2 months free</p>
               </div>
             </div>
             
@@ -112,7 +115,39 @@
         </div>
         <!--Step 3-->
         <div class="step-information-three">
+          <h1 class="primary-header">Pick Add-ons</h1>
+          <p class="primary-paragraph">Add-ons help enhance your gaming experience.</p>
 
+          <div class="add-ons">
+            <div class="add-ons-opt">
+              <input type="checkbox" name="service" id="service">
+              <div>
+                <h3 class="add-on-header">Online Service</h3>
+                <p class="add-on-text">Access to multiplayer games</p>
+              </div>
+            </div>
+            <p class="add-on-bill">+$1/mo</p>
+          </div>
+          <div class="add-ons">
+            <div class="add-ons-opt">
+              <input type="checkbox" name="storage" id="storage">
+              <div>
+                <h3 class="add-on-header">Larger storage</h3>
+                <p class="add-on-text">Extra 1TB of cloud save</p>
+              </div>
+            </div>
+            <p class="add-on-bill">+$2/mo</p>
+          </div>
+          <div class="add-ons">
+            <div class="add-ons-opt">
+              <input type="checkbox" name="profile" id="profile">
+              <div>
+                <h3 class="add-on-header">Customizable profile</h3>
+                <p class="add-on-text">Custom theme on your profile</p>
+              </div>
+            </div>
+            <p class="add-on-bill">+$2/mo</p>
+          </div>
         </div>
         <!--Step 4-->
         <div class="step-information-four">
@@ -131,32 +166,10 @@
 
   
 
-  <!-- Step 2 start
 
-  Select your plan
-  You have the option of monthly or yearly billing.
-
-  Arcade
-  $9/mo
-
-  Advanced
-  $12/mo
-
-  Pro
-  $15/mo
-
-  Monthly
-  Yearly
-
-  Go Back
-  Next Step
-
-  Step 2 end -->
 
   <!-- Step 3 start
 
-  Pick add-ons
-  Add-ons help enhance your gaming experience.
 
   Online service
   Access to multiplayer games
@@ -199,6 +212,6 @@
 
   Step 5 end -->
   
-
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
