step-information-three styled

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
           <div class="add-ons">
             <div class="add-ons-opt">
-              <input type="checkbox" name="service" id="service">
+              <input type="checkbox" title="service" id="service">
               <div>
                 <h3 class="add-on-header">Online Service</h3>
                 <p class="add-on-text">Access to multiplayer games</p>
@@ -130,7 +130,7 @@
           </div>
           <div class="add-ons">
             <div class="add-ons-opt">
-              <input type="checkbox" name="storage" id="storage">
+              <input type="checkbox" title="storage" id="storage">
               <div>
                 <h3 class="add-on-header">Larger storage</h3>
                 <p class="add-on-text">Extra 1TB of cloud save</p>
@@ -140,7 +140,7 @@
           </div>
           <div class="add-ons">
             <div class="add-ons-opt">
-              <input type="checkbox" name="profile" id="profile">
+              <input type="checkbox" title="profile" id="profile">
               <div>
                 <h3 class="add-on-header">Customizable profile</h3>
                 <p class="add-on-text">Custom theme on your profile</p>
