mobile layout overflow fixed

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <div class="switch"><div></div></div>
             <p>Yearly</p>
           </div>
-          <footer class="flex-row j-between">
+          <footer class="">
             <a href="#"><button class="go-back">Go Back</button></a>
             <a href="#"><button type="button" class="next-step-btn">Next Step</button></a>
           </footer>
@@ -148,6 +148,11 @@
             </div>
             <p class="add-on-bill">+$2/mo</p>
           </div>
+
+          <footer class="">
+            <a href="#"><button class="go-back">Go Back</button></a>
+            <a href="#"><button type="button" class="next-step-btn">Next Step</button></a>
+          </footer>
         </div>
         <!--Step 4-->
         <div class="step-information-four">
