--- a/index.html
+++ b/index.html
@@ -185,7 +185,11 @@
         </div>
         <!--Step 5-->
         <div class="step-information-five">
-
+          <img src="assets/images/icon-thank-you.svg" alt="Check mark">
+          <h1 class="primary-header">Thank you</h1>
+          <p class="primary-paragraph">Thanks for confirming your subscription! We hope you have fun 
+            using our platform. If you ever need support, please feel free 
+            to email us at support@loremgaming.com.</p>
         </div>
       </div>
 
@@ -194,53 +198,6 @@
     <a href="#"><button type="button" class="next-step-btn">Next Step</button></a>
   </footer>
 
-  
-
-
-
-  <!-- Step 3 start
-
-
-  Online service
-  Access to multiplayer games
-  +$1/mo
-
-  Larger storage
-  Extra 1TB of cloud save
-  +$2/mo
-
-  Customizable Profile
-  Custom theme on your profile
-  +$2/mo
-
-  Go Back
-  Next Step
-
-  Step 3 end -->
-
-  <!-- Step 4 start 
-
-  Finishing up
-  Double-check everything looks OK before confirming.
-
-  Dynamically add subscription and add-on selections here
-
-  Total (per month/year)
-
-  Go Back
-  Confirm
-
-  Step 4 end -->
-
-  <!-- Step 5 start
-
-  Thank you!
-
-  Thanks for confirming your subscription! We hope you have fun 
-  using our platform. If you ever need support, please feel free 
-  to email us at support@loremgaming.com.
-
-  Step 5 end -->
   
     <script src="assets/js/main.js"></script>
 </body>
